<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Budget Duck</string>
    <string name="add_btn">ADD</string>
    <string name="new_entry_title">Add new Expense or Revenue</string>
    <string name="save">SAVE</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="amount">Amount:</string>
    <string name="travelling">Travelling</string>
    <string name="food">Food</string>
    <string name="electronics">Electronics</string>
    <string name="video_editing_and_streaming">Video Editing and Streaming</string>
    <string name="pets">Pets</string>
    <string name="hobbies">Hobbies</string>
    <string name="music">Music</string>
    <string name="house">House</string>
    <string name="games">Games</string>
    <string name="family_and_friends">Family and Friends</string>
    <string name="gifts">Gifts</string>
    <string name="paycheck">Paycheck</string>
    <string name="it_s_an_expense">It\'s an Expense</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
    <string name="category">Category</string>
    <string name="amount2">Amount</string>
    <string name="online_shopping">Online Shopping</string>
</resources>